--- a/Units/index.html
+++ b/Units/index.html
@@ -1,24 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Units</title>
-    <link rel="stylesheet" href="app.css">
-</head>
-<body>
-    <h1>CSS Units</h1>
+    <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
+    <h1>CSS Units <button>Click Me</button></h1>
 
-    <article>
-        <h2>I am h2</h2>
+    <article id="ems">
+      <h2>I am h2</h2>
+      <h3>I am h3</h3>
+      <button>Click Me!</button>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+        mollitia veniam explicabo nostrum beatae incidunt earum recusandae
+        laboriosam animi deserunt modi, sequi deleniti harum impedit optio illo
+        perferendis. Temporibus, soluta?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+        suscipit, molestiae illum, voluptas deserunt unde quibusdam, quas
+        officiis aliquam minima accusantium ducimus quam dolorem corrupti ab
+        voluptatem dolorum qui fugit!
+      </p>
+      <ul>
+        <li>
+          Pizza
+          <ul>
+            <li>
+              Pepperoni
+              <ul>
+                <li>Mushroom</li>
+              </ul>
+            </li>
+            <li>Sausage</li>
+          </ul>
+        </li>
+        <li>Hamburger</li>
+        <li>Taco</li>
+      </ul>
+    </article>
+
+    <article id="rems">
+        <h2>Using rems instead of ems!</h2>
         <h3>I am h3</h3>
         <button>Click Me!</button>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem mollitia veniam explicabo nostrum beatae incidunt earum recusandae laboriosam animi deserunt modi, sequi deleniti harum impedit optio illo perferendis. Temporibus, soluta?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi suscipit, molestiae illum, voluptas deserunt unde quibusdam, quas officiis aliquam minima accusantium ducimus quam dolorem corrupti ab voluptatem dolorum qui fugit!</p>
-    </article>
-    <section>
-        <div></div>
-    </section>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          mollitia veniam explicabo nostrum beatae incidunt earum recusandae
+          laboriosam animi deserunt modi, sequi deleniti harum impedit optio illo
+          perferendis. Temporibus, soluta?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+          suscipit, molestiae illum, voluptas deserunt unde quibusdam, quas
+          officiis aliquam minima accusantium ducimus quam dolorem corrupti ab
+          voluptatem dolorum qui fugit!
+        </p>
+        <ul>
+          <li>
+            Pizza
+            <ul>
+              <li>
+                Pepperoni
+                <ul>
+                  <li>Mushroom</li>
+                </ul>
+              </li>
+              <li>Sausage</li>
+            </ul>
+          </li>
+          <li>Hamburger</li>
+          <li>Taco</li>
+        </ul>
+      </article>
 
-</body>
+    <button>Click Me!</button>
+    <section id="percentages">
+      <div></div>
+    </section>
+  </body>
 </html>
